--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,7 +6,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #3c2213;
+    background-image: url('../img/bg-filtered.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .button-container {
@@ -17,6 +19,9 @@ body {
 .button-container a{
     text-decoration: none;
 }
+.button-container img{
+    border-radius: 5px;
+}
 .custom-button {
     padding: 15px 30px;
     margin: 5px;
@@ -25,7 +30,7 @@ body {
     background-color: #fbb13b;
     color: #f9f7f1;
     font-weight: 600;
-    font-family: Tahoma, Arial, Helvetica, sans-serif;
+    font-family: "Roboto",Tahoma, Arial, Helvetica, sans-serif;
     border: none;
     border-radius: 5px;
     transition: 300ms;
@@ -40,7 +45,7 @@ body {
 /* Adicionando regras de estilo para dispositivos móveis */
 @media only screen and (max-width: 600px) {
     .custom-button {
-        padding: 8px 16px;
+        padding: 12px 16px;
         font-size: 14px;
     }
 }
